First Try to add Navegation Menu

--- a/Lab01_LWP/app/src/main/res/layout/activity_main.xml
+++ b/Lab01_LWP/app/src/main/res/layout/activity_main.xml
@@ -50,4 +50,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtID" />
 
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:id="@+id/btnOK"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="ejecutar"
+            android:text="@string/btn_signin" />
+    </TableRow>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
